# yolov1-real-time-obj-detection

./: README.md  custom_transform.py  data.py  figs.py  get_data.sh  get_inference_speed.py  iou_map_tester.py  opencv_video.py  pyproject.toml  requirements.txt  setup.py  terminal.ipynb  test.txt  train.txt  train_darknet.py  train_yolov1.py  yolov1_loss.py  yolov1_utils.py  yolov1_watches_you.py  yolov1_watches_youtube.py  yolov1net_resnet18.py  yolov1net_resnet50.py  yolov1net_vgg19bn.py
application/: yolov1_watches_you.py  yolov1_watches_youtube.py
loss/: yolov1_loss.py
models/: darknet.py  tiny_yolov1net.py  tiny_yolov1net_mobilenetv3_large.py  tiny_yolov1net_mobilenetv3_small.py  tiny_yolov1net_resnet18.py  tiny_yolov1net_squeezenet.py  yolov1net_darknet.py
myproject.egg-info/: SOURCES.txt  top_level.txt
old_txt_files/: 2007_test.txt  2007_train.txt  2007_val.txt  2012_train.txt  2012_val.txt  train.txt
results/: cpu_mobilenetv3_large_tiny_adj_lr_inference_speed.txt  cpu_mobilenetv3_small_tiny_adj_lr_inference_speed.txt  cpu_squeezenet_tiny_adj_lr_inference_speed.txt  cpu_tiny_adj_lr_inference_speed.txt  gpu_vgg19bn_adj_lr_inference_speed.txt  mobilenetv3_large_tiny_adj_lr_test_loss.txt  mobilenetv3_large_tiny_adj_lr_test_mAP.txt  mobilenetv3_large_tiny_adj_lr_train_loss.txt  mobilenetv3_large_tiny_adj_lr_train_mAP.txt  mobilenetv3_small_tiny_adj_lr_test_loss.txt  mobilenetv3_small_tiny_adj_lr_test_mAP.txt  mobilenetv3_small_tiny_adj_lr_train_loss.txt  mobilenetv3_small_tiny_adj_lr_train_mAP.txt  mobilenetv3_tiny_adj_lr_test_loss.txt  (+30 more)
train/: __init__.py  (+2 more)
(+13 files in other folders)
